syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ian.product";

package com.ian.product;

service ProductService {
  rpc FindProductById (FindProductByIdRequest) returns (ProductResponse) {}
}

message FindProductByIdRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
}